overflow fix

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -52,7 +52,3 @@
 .min-height-full {
   min-height: 100vh;
 }
-
-body {
-  overflow: hidden;
-}
